syntax = "proto3";

option java_multiple_files = true;
option java_package = "auth";

service AuthService{
  rpc ExtractUserInfo (AuthRequest) returns (AuthResponse);
}

message AuthRequest{
  string token = 1;
}

message AuthResponse{
  int64 userId = 1;
  string userEmail = 2;
  string userRole = 3;
}